# metagram.net

./: .dockerignore  .env  .eslintrc.js  .gitignore  CODEOWNERS  Cargo.toml  Dockerfile  Dockerfile-migrate  Makefile  Makefile.toml  README.md  about.toml  bors.toml  build.mjs  build.rs  deny.toml  diesel.toml  docker-compose.yml  fly.toml  package-lock.json  package.json  sqlx-data.json  tailwind.config.js
.github/: dependabot.yml
.github/workflows/: dependencies.yml  deploy.yml  javascript.yml  rust.yml  test.yml
css/: index.css
docker/dev-postgres/initdb.d/: 0-create-databases.sql
js/: app.ts  app.tsx  feature_detection.ts  firehose.ts  install_service_worker.ts  multi_select.ts  nav.ts
metagram_server/: Cargo.toml  build.rs  sqlx-data.json
metagram_server/src/: auth.rs  firehose.rs  jobs.rs  lib.rs  queue.rs
metagram_server/src/web/: auth.rs  firehose.rs  mod.rs  service_worker.js  streams.rs  tags.rs
metagram_server/templates/auth/: login_confirmation.html
metagram_server/templates/errors/: 404_not_found.html
metagram_server/templates/firehose/drops/: _card.html  edit.html
metagram_server/templates/firehose/hydrants/: show.html
metagram_server/templates/firehose/streams/: _card.html  index.html  show.html
metagram_server/templates/firehose/tags/: _badge.html  _fields.html  index.html  new.html
metagram_server/templates/home/: about.html  licenses.hbs  licenses.html
metagram_server/templates/layouts/: base.html
metagram_server/templates/macros/: form.html
migrations/0000000000-init/: down.sql  up.sql
migrations/0000000001-manage_updated_at/: up.sql
migrations/0000000002-init_squill/: down.sql  up.sql
migrations/0000000003-remove_drift/: down.sql  up.sql
migrations/1658549670-create_users/: up.sql
migrations/1658566580-create_drops/: down.sql  up.sql
migrations/1659415750-create_tags/: up.sql
migrations/1660440929-create_streams/: up.sql
migrations/1660534303-create_hydrants/: down.sql  up.sql
migrations/1664242604-create_jobs/: up.sql
migrations/1664951995-add_hydrant_id_to_drops/: down.sql  up.sql
migrations/2022-07-22-211430_create_users/: up.sql
migrations/2022-07-23-015620_create_drops/: up.sql
migrations/2022-08-01-214910_create_tags/: down.sql  up.sql
migrations/2022-08-13-183529_create_streams/: down.sql  up.sql
migrations/2022-08-14-203143_create_hydrants/: up.sql
src/: auth.rs  filters.rs  firehose.rs  jobs.rs  lib.rs  main.rs  models.rs  queue.rs  routes.rs  schema.rs  sql_types.rs  stytch.rs  view_models.rs
src/controllers/: auth.rs  drops.rs  errors.rs  firehose.rs  home.rs  hydrants.rs  mod.rs  service_worker.js  streams.rs  tags.rs
src/web/: auth.rs  drops.rs  errors.rs  hydrants.rs  mod.rs  tags.rs  whoops.rs
templates/: 404_not_found.html  422_unprocessable_entity.html  500_internal_server_error.html  base.html  index.html  login.html  login_confirmation.html  macros.html
templates/auth/: login.html  login_confirmation.html
templates/errors/: 404_resource_not_found.html  422_unprocessable_entity.html  500_internal_server_error.html
templates/firehose/: about.html  drop.html  status_stream.html  stream.html
templates/firehose/drops/: _card.html  _component.html  _fields.html  edit.html  new.html  show.html
templates/firehose/hydrants/: _card.html  _fields.html  edit.html  index.html  new.html  show.html
templates/firehose/streams/: _card.html  _fields.html  edit.html  index.html  new.html  show.html
templates/firehose/tags/: _badge.html  _badge_no_link.html  _fields.html  edit.html  index.html  new.html  show.html
templates/home/: about.html  index.html  licenses.hbs  licenses.html
templates/layouts/: base.html  firehose.html
templates/macros/: drop.html  form.html
