[package]
name = "metagram"
version = "0.1.0"
edition = "2021"
default-run = "server"
license = "AGPL-3.0-or-later"

[dependencies]
addr = "0.15.6"
anyhow = "1.0.65"
askama = { git = "https://github.com/djc/askama", features = [ "with-axum" ] } # version = 0.11.2
askama_axum = { git = "https://github.com/djc/askama" } # version = 0.1.0
async-trait = "0.1.57"
axum = { version = "0.5.16", features = ["headers"] }
axum-extra = { version = "0.3.7", features = ["cookie-private", "cookie", "typed-routing", "spa", "form"] }
axum_csrf = "0.4.1"
base64 = "0.13.0"
chrono = { version = "0.4.22", features = ["serde"], default-features = false }
clap = { version = "4.0.10", features = ["derive"] }
cookie = { version = "0.16.0", features = ["private"] }
derivative = "2.2.0"
envy = "0.4.2"
fake = "2.5.0"
http = "0.2.8"
hyper = "0.14.20"
lazy_static = "1.4.0"
mockall = "0.11.2"
rand = "0.8.5"
regex = "1.6.0"
reqwest = "0.11.12"
rss = "2.0.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "json"] }
stytch = { git = "https://github.com/jdkaplan/stytch-rust" }
thiserror = "1.0.36"
tokio = { version = "1.21.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["trace", "request-id", "fs"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "json"] }
typetag = "0.2.3"
url = "2.3.1"
uuid = { version = "1.1.2", features = ["v4", "serde"] }

[dev-dependencies]
axum-macros = "0.2.3"

[package.metadata.cargo-machete]
ignored = [
    # Implement axum's IntoResponse for askama's Template. This usage is a
    # false-positive for machete.
    "askama_axum",
]
