[package]
name = "metagram"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
addr = "0.15.6"
anyhow = "1.0.68"
askama = { git = "https://github.com/djc/askama", features = [ "with-axum" ] } # version = 0.11.2
askama_axum = { git = "https://github.com/djc/askama" } # version = 0.1.0
async-trait = "0.1.63"
axum = { version = "0.5.17", features = ["headers"] }
axum-extra = { version = "0.3.7", features = ["cookie-private", "cookie", "typed-routing", "spa", "form"] }
axum_csrf = "0.5.0"
base64 = "0.13.1"
chrono = { version = "0.4.23", features = ["serde"], default-features = false }
clap = { version = "4.0.32", features = ["derive"] }
cookie = { version = "0.16.2", features = ["private"] }
derivative = "2.2.0"
envy = "0.4.2"
fake = "2.5.0"
http = "0.2.8"
hyper = "0.14.23"
lazy_static = "1.4.0"
mockall = "0.11.3"
rand = "0.8.5"
regex = "1.7.1"
reqwest = "0.11.13"
rss = "2.0.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "json", "offline"] }
stytch = { git = "https://github.com/jdkaplan/stytch-rust", features = ["reqwest"] }
thiserror = "1.0.36"
tokio = { version = "1.24.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["trace", "request-id", "fs"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "json"] }
typetag = "0.2.3"
url = "2.3.1"
uuid = { version = "1.2.2", features = ["v4", "serde"] }

[dev-dependencies]
axum-macros = "0.2.3"

[package.metadata.cargo-machete]
ignored = [
    # Implement axum's IntoResponse for askama's Template. This usage is a
    # false-positive for machete.
    "askama_axum",
]
