[package]
name = "metagram"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
addr = "0.15.6"
anyhow = "1.0.70"
askama = { git = "https://github.com/djc/askama", features = [ "with-axum" ] } # version = 0.11.2
askama_axum = { git = "https://github.com/djc/askama" } # version = 0.1.0
async-trait = "0.1.66"
axum = { version = "0.6.12", features = ["headers", "macros"] }
axum-extra = { version = "0.7.3", features = ["cookie-private", "cookie", "typed-routing", "form"] }
axum_csrf = "0.6.0"
base64 = "0.21.0"
chrono = { version = "0.4.24", features = ["serde"], default-features = false }
clap = { version = "4.2.2", features = ["derive"] }
cookie = { version = "0.17.0", features = ["private"] }
derivative = "2.2.0"
envy = "0.4.2"
fake = "2.5.0"
http = "0.2.9"
hyper = "0.14.25"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.7.3"
reqwest = "0.11.16"
rss = "2.0.3"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "json", "offline"] }
stytch = { git = "https://github.com/jdkaplan/stytch-rust", features = ["reqwest"] }
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace", "request-id", "fs", "util"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "json"] }
typetag = "0.2.7"
url = "2.3.1"
uuid = { version = "1.3.1", features = ["v4", "serde"] }

[dev-dependencies]
axum-macros = "0.3.4"

[package.metadata.cargo-machete]
ignored = [
    # Implement axum's IntoResponse for askama's Template. This usage is a
    # false-positive for machete.
    "askama_axum",
]
