[package]
name = "metagram_server"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
addr = "0.15.6"
anyhow = "1.0.72"
askama = { git = "https://github.com/djc/askama", features = [ "with-axum" ] } # version = 0.11.2
askama_axum = { git = "https://github.com/djc/askama" } # version = 0.1.0
async-trait = "0.1.71"
axum = { version = "0.6.18", features = ["headers", "macros"] }
axum-extra = { version = "0.7.4", features = ["cookie-private", "cookie", "typed-routing", "form"] }
axum_csrf = "0.6.0"
base64 = "0.21.2"
chrono = { version = "0.4.26", features = ["serde"], default-features = false }
clap = { version = "4.3.11", features = ["derive"] }
cookie = { version = "0.17.0", features = ["private"] }
derivative = "2.2.0"
envy = "0.4.2"
fake = "2.6.1"
http = "0.2.9"
hyper = "0.14.27"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.9.1"
reqwest = "0.11.18"
rss = "2.0.4"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.103"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "json", "offline"] }
stytch = { git = "https://github.com/jdkaplan/stytch-rust", features = ["reqwest"] }
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace", "request-id", "fs", "util"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
typetag = "0.2.8"
url = "2.4.0"
uuid = { version = "1.4.0", features = ["v4", "serde"] }

[dev-dependencies]
axum-macros = "0.3.4"

[package.metadata.cargo-machete]
ignored = [
    # Implement axum's IntoResponse for askama's Template. This usage is a
    # false-positive for machete.
    "askama_axum",
]
